styles/index.css
/* ... */
.error-decoration {
  border-color: rgb(var(--color-error) / 50%);

  .container-item-title {
    background-color: rgb(var(--color-error) / 80%);
    border-bottom-color: rgb(var(--color-error) / 50%);
    color: rgb(var(--color-black));
  }

  .container-item-content {
    background-color: rgb(var(--color-error) / 10%);
  }
}

.info-decoration {
  border-color: rgb(var(--color-info) / 50%);

  .container-item-title {
    background-color: rgb(var(--color-info) / 80%);
    border-bottom-color: rgb(var(--color-info) / 50%);
    color: rgb(var(--color-black));
  }

  .container-item-content {
    background-color: rgb(var(--color-info) / 10%);
  }
}

.status-name {
  background-color: color-mix(currentcolor 10%);
  border: var(--pixel) solid currentcolor;
  border-radius: var(--default-border-radius);
  font-size: .75em;
  font-weight: 600;
  padding: .25em .75em;
  display: grid;
  grid-template-columns: auto auto;
  align-items: center;
  justify-content: start;
  gap: .5em;

  .status-name-text {
    color: var(--text-color);
  }
}

.dot {
  background-color: currentcolor;
  border-radius: 50%;
  display: inline-block;
  height: .5rem;
  width: .5rem;
}

.dot-missing,
.status-missing {
  color: rgb(var(--color-gray));
}

.dot-outdated,
.status-outdated {
  color: rgb(var(--color-warning));
}

.dot-poisoned,
.status-poisoned {
  color: rgb(var(--color-poisoned));
}

.dot-untranslated,
.status-untranslated {
  color: rgb(var(--color-error));
}

.dot-translated,
.status-translated {
  color: rgb(var(--color-success));
}

.highcharts-root {
  @media (prefers-color-scheme: dark) {
    .highcharts-background {
      fill: rgb(var(--color-preblack));
    }

    text {
      fill: rgb(var(--color-white)) !important;
    }

    .highcharts-button-disabled text {
      fill: rgb(var(--color-white) / 35%) !important;
    }

    .highcharts-text-outline {
      stroke-width: 0;
    }

    .highcharts-button-disabled .highcharts-button-box,
    .highcharts-button-normal .highcharts-button-box,
    .highcharts-button-pressed .highcharts-button-box {
      fill: rgb(var(--color-lightgray) / 25%);
    }

    .highcharts-tooltip-box {
      fill: rgb(var(--color-white));

      text {
        fill: rgb(var(--color-black)) !important;
      }
    }
  }
}

.path-container {
  filter: blur(25rem);
  height: 100%;
  position: fixed;
  width: 100%;
  z-index: -1;

  .path-left,
  .path-right {
    clip-path: polygon(-22px 86.6%, -3.44% 47.18%, 9.55% 14.96%, 30.96% 24.57%, 42.41% 4.36%, 95.35% 13.26%, 102.53% 57.75%, 77.2% 104.53%, 26.47% 86.72%);
    opacity: .2;
    height: 45vh;
    position: absolute;
    transform: translate(0) rotate(0) scale(1) skew(0); /* Fix GPU usage */
    width: 45vh;
  }
  
  .path-left {
    background-color: rgb(var(--color-success));
    left: -15vw;
    top: -5vh;
    rotate: 45deg;
  }
  
  .path-right {
    background-color: rgb(var(--color-info));
    bottom: 10vh;
    right: 2vw;
    rotate: 125deg;
  }
}

.sr-only {
  border: 0;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.experimental-badge {
  background-color: rgb(var(--color-info));
  border-radius: var(--default-border-radius);
  color: rgb(var(--color-black));
  display: inline-flex;
  font-size: .875rem;
  font-weight: 700;
  padding: .35rem .5rem;
  text-transform: uppercase;
  text-decoration: underline 2px;
}

